tests/NormalTests/paczka1/fuzzy1/48547802.err
Error in line 20: vCuH S842 98,0
Error in line 23: jppYqirHr A458 75,3
Error in line 26: vCuH S842 37,9
Error in line 28: jppYqirHr A709 15,8
Error in line 35: xEuZXlWciE S842 42,9
